<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="let_play">Let\'s play</string>
    <string name="your_input">Tap to Play</string>
    <string name="your_turn">Your Turn!</string>
    <string name="Setting">Setting</string>
    <string name="three_x_three">Three X Three Board</string>
    <string name="six_x_six">Six X Six Board</string>
    <string name="nine_x_nine">Nine X Nine Board</string>
    <string name="friend">With Friends</string>
    <string name="computer">With Computer</string>
    <string name="three">3 X 3</string>
    <string name="select_to_board">Select to board</string>
    <string name="with_friend">Play with friend</string>
    <string name="with_bot">Play with bot</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="game_rules">Game Rules</string>
    <string name="about">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="share">Share</string>
    <string name="change_board">Change Board</string>
    <string name="choose_board">Choose your board</string>
    <string name="three_win_condition">Win Condition</string>
    <string name="gameplay">Gameplay:</string>
    <string name="more">more</string>
    <string name="or">or</string>
    <string name="x">x</string>
    <string name="o">o</string>
    <string name="new_game">New game</string>
    <string name="bot_score">Bot score:</string>
    <string name="final_scr">Final Score</string>
    <string name="your_score">Your score:</string>
    <string name="move_made">Moves made:</string>
    <string name="time_taken">Time taken:</string>
    <string name="review_match">Review Match</string>
    <string name="exit_game">Exit Game</string>
    <string name="home">Home</string>
    <string name="exit_game_msg">Are you sure you want to exit the current game?</string>
    <string name="rematch">Rematch</string>
    <string name="dis_3X3_1">Players: The game is typically played by two players.</string>
    <string name="dis_3X3_2">Symbols: One player chooses to be "X" and the other "O."</string>
    <string name="dis_3X3_3">Turns: Players alternate turns.</string>
    <string name="dis_3X3_4">Placement: On each turn, a player places their symbol (X or O) into one of the nine empty squares on the 3x3 grid.</string>
    <string name="dis_3X3_5">Winner: The first player to create a line of 3 identical symbols wins the game.</string>
    <string name="three_rule">First player to get three in a row wins!</string>
    <string name="six_rule">First player to get six in a row wins!</string>
    <string name="nine_rule">First player to get nine in a row wins!</string>
</resources>