<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="TODO"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/Setting"
        app:cornerRadius="12dp"
        app:icon="@drawable/setting"
        app:iconSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/board_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ptsans_bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/three_x_three"
            android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/win_cond_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ptsans_bold"
            android:text="@string/three_win_condition"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/win_cond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dis_3X3_5"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:textColor="@color/tertiary" />
        <!-- Buttons -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_board"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:text="@string/change_board"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/three_play_bot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_play_bot"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:text="@string/with_bot"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/secondaryContainer"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/three_play_friend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/change_board"
                app:strokeColor="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three_play_friend"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:text="@string/with_friend"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/secondaryContainer"
                app:cornerRadius="8dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/three_play_bot"
                app:strokeColor="@color/primary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>