<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_back"
    android:backgroundTint="@null"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ptsans_bold"
        android:gravity="center"
        android:text="@string/setting"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/night_mode"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/materialSwitch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialSwitch" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/materialSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/dark_mode"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/game_rules"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/game_rules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_rules" />

    <TextView
        android:id="@+id/game_rules"
        android:clickable="true"
        android:fontFamily="@font/ptsans_bold"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/game_rules"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toStartOf="@+id/game_rules_arrow"
        app:layout_constraintStart_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toBottomOf="@+id/materialSwitch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/game_rules_arrow"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/arrow_forward_ios_24px"
        app:iconSize="24dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/game_rules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/game_rules" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/share"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share" />

    <TextView
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="2dp"
        android:clickable="true"
        android:fontFamily="@font/ptsans_bold"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toStartOf="@+id/share_arrow"
        app:layout_constraintStart_toEndOf="@+id/materialButton3"
        app:layout_constraintTop_toBottomOf="@+id/game_rules" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_arrow"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/arrow_forward_ios_24px"
        app:iconSize="24dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/apps"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/mode_apps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mode_apps" />

    <TextView
        android:id="@+id/mode_apps"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/more_apps"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toStartOf="@+id/mode_apps_arrow"
        app:layout_constraintStart_toEndOf="@+id/materialButton4"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mode_apps_arrow"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/arrow_forward_ios_24px"
        app:iconSize="24dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/mode_apps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mode_apps" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton5"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/about"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/about" />

    <TextView
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toStartOf="@+id/about_arrow"
        app:layout_constraintStart_toEndOf="@+id/materialButton5"
        app:layout_constraintTop_toBottomOf="@+id/mode_apps" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/about_arrow"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/arrow_forward_ios_24px"
        app:iconSize="24dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/about" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton6"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/security_24px"
        app:iconSize="28dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacy" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/ptsans_bold"
        android:text="@string/privacy_policy"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintEnd_toStartOf="@+id/privacy_arrow"
        app:layout_constraintStart_toEndOf="@+id/materialButton6"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy_arrow"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:icon="@drawable/arrow_forward_ios_24px"
        app:iconSize="24dp"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/privacy" />

</androidx.constraintlayout.widget.ConstraintLayout>
