<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_back"
    android:backgroundTint="@null"
    android:paddingTop="18dp"
    android:paddingBottom="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ptsans_bold"
        android:gravity="center"
        android:text="@string/final_scr"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/o_scr"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/secondaryContainer"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toStartOf="@+id/x_scr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:strokeColor="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/you"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="You:"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/background"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/lower_Green_container">

                <TextView
                    android:id="@+id/you_sco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/x_scr"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryContainer"
        app:strokeColor="@color/primary"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/o_scr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/o_scr"
        app:layout_constraintTop_toTopOf="@+id/o_scr">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/Friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="Bot:"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/background1"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/lower_Orange_container">

                <TextView
                    android:id="@+id/Friend_sco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/o_img_back"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lower_Green_container"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/o_scr"
        app:layout_constraintEnd_toEndOf="@+id/o_scr"
        app:layout_constraintStart_toStartOf="@+id/o_scr"
        app:layout_constraintTop_toTopOf="@+id/o_scr">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/o"
            android:padding="8dp"
            android:layout_margin="2dp"
            android:src="@drawable/o_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/x_img_back"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lower_Orange_container"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/x_scr"
        app:layout_constraintEnd_toEndOf="@+id/x_scr"
        app:layout_constraintStart_toStartOf="@+id/x_scr"
        app:layout_constraintTop_toTopOf="@+id/x_scr">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/o"
            android:padding="8dp"
            android:layout_margin="2dp"
            android:src="@drawable/x_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        app:iconSize="22dp"
        app:iconTint="@color/primary"
        app:iconGravity="textStart"
        app:icon="@drawable/home"
        android:backgroundTint="@color/secondaryContainer"
        android:text="@string/home"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/primary"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/o_scr"
        app:strokeColor="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_game"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        app:iconSize="24dp"
        app:iconTint="@color/primaryContainer"
        app:iconGravity="textStart"
        app:icon="@drawable/add_icon"
        android:text="@string/new_game"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/primaryContainer"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home"/>


</androidx.constraintlayout.widget.ConstraintLayout>